# gnn-reproduce-cdt23-with-acts

./: .gitignore  README.md  benchmark.sh  cdt23_reco_chain.py  convert.sh  convert_to_torchscript.sh  get_data.sh  make_flamegraph.sh  make_gnn_model.sh  run_acts.sh  run_ctd23_acorn.sh  run_ctd23_acts.sh  run_ctd23_ml_acts.sh  run_graph_and_tracks_dump.sh  run_mmg_cuda.sh  run_mmg_cuda_24.sh  run_mmg_standalone.sh  run_mmg_standalone_cuda.sh  run_mmg_test.sh  run_mmg_test_23.sh  run_mmg_test_24.sh  run_rel24_acorn.sh  run_rel24_acts.sh  run_rel24_acts_aot.sh  run_rel24_acts_with_fit.sh  run_rel24_single_muon.sh  run_single_muons.sh  run_single_muons_acorn.sh  run_truth_tracking_muons.sh  tensorrt_conversion.sh
ctd23/config/: data_reader.yaml  evalset.txt  gnn_eval.yaml  gnn_infer.yaml  module_map.yaml  testset.txt  trainset.txt
notebooks/: compare_truth_graph.ipynb  single_muons_truth_graph.ipynb  surface_matching.ipynb  test_cdt23_metric_learning_pipeline.ipynb  test_torchscript.ipynb
rel24/config/: data_reader.yaml  data_reader_single_muons.yaml  evalset.txt  gnn.yaml  module_map.yaml  testset.txt  trainset.txt
scripts/: cdt23_reco_chain.py  common_pipeline.py  dump_constructed_graph.py  dump_prototracks.py  metric_learning_pipeline.py  module_map_pipeline.py  plot_efficiency.py  plot_gpu_memory.py  plot_timing.py  save_full_model.py  truth_tracking.py
test_aot/: CMakeLists.txt  inference.cpp  run_build.sh
